--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
           go-version: 1.22  # Use the Go version of your project
 
@@ -26,7 +26,7 @@ jobs:
         run: go mod tidy
 
       - name: Lint with golangci-lint
-        uses: golangci/golangci-lint-action@v2
+        uses: golangci/golangci-lint-action@v4
         with:
           # Optional: some setup config here
           version: latest
@@ -35,8 +35,15 @@ jobs:
       - name: Vet
         run: go vet ./...
 
+      - uses: dominikh/staticcheck-action@v1.3.0
+        with:
+            version: "2023.1.7"
+
       - name: Staticcheck
         run: staticcheck ./...
+
+      - name: Test
+        run: make test-ci
 
       - name: Build
         run: go build ./...
